# Crina-Damoc

./: .gitignore  INSTABILITY_ANALYSIS.md  LICENSE  README.md  TO_DEBUNK.md  benchmark_crina_vs_llama.py  crina_model.py  crina_openwebtext.py  crina_tinyshakespeare.py  diagnose_nan.py  download_dataset.py  evaluate_arc_agi1.py  evaluate_arc_agi2.py  example_cuda_kernel.py  generative_pc.py  main.py  pc_demo.py  prepare_multimodal_dataset.py  prepare_multimodal_dataset_v2.py  repro_compile.py  spiking_pc_demo.py  test_attention.py  test_cpu.py  test_cuda_lib.py  test_hyperparam_optimize.py  test_script.py  test_script_2.py  trace.json  train_crina_arc.py  train_crina_pc.py  train_crina_prototype.py  train_log.txt  verify_addadd.py  verify_alif.py  verify_base_proj.py  verify_causality.py  verify_compile.py  verify_cuda_linear.py  verify_rmsnorm.py  verify_train.py
crina_burn/: .gitignore  Cargo.toml
crina_burn/src/: data.rs  main.rs  model.rs
damoc/: damoc_testing.py
notes/: NORMALIZATION.md
